# ghostscribe

./: .editorconfig  .gitignore  HARDWARE.md  README.md  TODO.md  start_requirements.md
.github/workflows/: ci.yml
client/: config.example.toml  pyproject.toml  requirements.txt
client/ghostscribe_client/: __init__.py
client/linux/: README.md  config.example.toml  pyproject.toml  requirements.txt
client/linux-rs/: .gitignore  BUILD.md  Cargo.toml  README.md
client/linux-rs/src/: audio.rs  config.rs  hotkey.rs  lib.rs  main.rs  paste.rs  tray.rs  upload.rs
client/linux/ghostscribe_client/: __main__.py  config.py  tray.py  watcher.py
client/linux/tests/: conftest.py  test_audio.py  test_clipboard.py  test_config.py  test_config_diff.py  test_submit.py  test_tray.py  test_trigger.py  test_watcher.py
client/windows/: .gitignore  BUILD.md  Cargo.toml  README.md  README.python.md  config.example.toml
client/windows/.cargo/: config.toml
client/windows/src/: audio.rs  config.rs  hotkey.rs  lib.rs  main.rs  paste.rs  tray.rs  upload.rs  watcher.rs
client/windows/tests/: config_diff.rs  upload.rs
server/: AUTH.md  pyproject.toml  requirements-dev.txt  requirements.txt
server/ghostscribe_server/: __init__.py  app.py  audio.py  config.py  inference.py  logging_setup.py  metrics.py
server/systemd/: ghostscribe-server.service  server.env.example
server/tests/: conftest.py  test_audio.py  test_auth.py  test_config.py  test_metrics.py  test_routes.py
