[project]
name = "ghostscribe-server"
version = "0.1.0"
description = "GhostScribe STT server: faster-whisper large-v3-turbo behind FastAPI."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GhostScribe contributors" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "python-multipart>=0.0.12",
    "faster-whisper>=1.1.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/your-org/ghostscribe"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostscribe_server*"]

[tool.setuptools.package-data]
ghostscribe_server = ["../assets/*.wav"]
