[project]
name = "ghostscribe-client"
version = "0.1.0"
description = "GhostScribe minimal PTT client for the GhostScribe STT server."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GhostScribe contributors" }]

dependencies = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24",
    "pynput>=1.7.6",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
    "pystray>=0.19",
    "pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
tray = [
    "PyGObject>=3.48",
]

[project.scripts]
ghostscribe-client = "ghostscribe_client.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostscribe_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
