[package]
name = "ghostscribe-client"
version = "0.1.0"
edition = "2021"
authors = ["GhostScribe"]
description = "Windows 11 push-to-talk client for GhostScribe (Ctrl+G)"

[[bin]]
name = "ghostscribe-client"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
hound = "3.5"
flacenc = "0.4"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
rand = "0.8"
arc-swap = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
] }
tray-icon = "0.19"
tao = "0.30"

[dev-dependencies]
mockito = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
